bonus: JRE minimal avec jlink